# idbi-innovate-2026

./: .gitignore  README.md
backend/: .env.example  .fastapicloudignore  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  data_store.py  main.py
backend/app/routers/: chat.py  portfolio.py  recommendations.py  session.py  transactions.py  triggers.py  users.py  warmup.py
backend/app/security/: deps.py  gpu_gate.py  quota.py  sessions.py
backend/app/services/: allocation.py  features.py  llm.py  memory.py  modal_client.py  portfolio.py  streaming.py  stt.py  text_normalize.py  transactions.py  triggers.py  tts.py
data/: README.md  requirements.txt
data/scripts/: config.py  generate_all.py  generate_instruments.py  generate_transactions.py  generate_users.py
docs/: frontend-mockup-brief.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AccountsTab.tsx  Avatar.tsx  ConnectButton.tsx  GoalsTab.tsx  InputBar.tsx  InvestTab.tsx  PortfolioSnapshot.tsx  QuickActions.tsx  QuotaBadge.tsx  SpokenLine.tsx  TabBar.tsx  TourGuide.tsx  UserSwitcher.tsx  VoiceModeToggle.tsx  VoiceSettings.tsx
frontend/src/lib/: api.ts  audio.ts  session.ts  voice.ts  wavEncode.ts
