[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wren-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "pyjwt==2.9.0",
    "num2words==0.5.14",
    "modal==1.5.1",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]
